// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package files.v1;

import "files/files.proto";
import "mojo/core/null.proto";
import "mojo/core/time.proto";

option go_package = "github.com/fuzzstan/files/go/pkg/files/v1;files";
option java_multiple_files = true;
option java_outer_classname = "MyFilesProto";
option java_package = "files.v1";

message GetFilesRequest {
    bool include_deleted = 1;
    string limit = 2;
    string cursor = 3;
    mojo.core.Timestamp last_updated_after = 4;
    int32 page_size = 2000;
    string page_token = 2001;
    int32 skip = 2002;
}

message GetFilesResponse {
    repeated files.File files = 1;
    int32 total_count = 2000;
    string next_page_token = 2001;
}

message GetFileRequest {
    string id = 1;
}

message CreateFileRequest {
    files.File file = 1;
}

message UpdateFileRequest {
    files.File file = 1;
}

message DeleteFileRequest {
    string id = 1;
}

service Files {
    rpc get_files(GetFilesRequest) returns (GetFilesResponse);
    rpc get_file(GetFileRequest) returns (files.File);
    rpc create_file(CreateFileRequest) returns (files.File);
    rpc update_file(UpdateFileRequest) returns (files.File);
    rpc delete_file(DeleteFileRequest) returns (mojo.core.Null);
}